--- a/views/newQuestion.pug
+++ b/views/newQuestion.pug
@@ -14,6 +14,11 @@ block content
           textarea.title-content(name='title' value=title required placeholder='Start your question with "What", "How", "Why", etc.')
           br
         div
+          label(for='imageURL')
+          br
+          textarea.title-content(name='imageURL' value=imageURL required placeholder='image url example : https://res.cloudinary.com/mabmab/image/upload/v1642456611/askMomDad.png')
+          br
+        div
           label(for='content')
           br
           textarea.question-content(name='content' value=content, placeholder="More info here...")
