--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -27,7 +27,7 @@ html
                   +field('', 'password', user.password, 'password', placeholder = "Password")
                   br
                   +field('', 'confirmPassword', '', 'password', placeholder = "Confirm Password")
-                  div#registerButton
+                  div#registerLoginButton
                     button(type='submit') Register
                   div#splashbutton
                     p#accountAlready: a(href='/') Have an account already?
