--- a/views/questionFeed.pug
+++ b/views/questionFeed.pug
@@ -1,24 +1,27 @@
 extends layout
 include utils
 block content
-    each question in questions
-      div.post(id=`question-container-${question.id}`)
-        div
-          img.user-icon(src='../stylesheets/userIcon.jpg')
-          span.span-css= question.User.username
-          //- span.phrase-css= 'asked'
-          span.cat= question.Category.category
-        div
-          a.title(href=`/questions/${question.id}`)= question.title
-          div
-            p.con= question.content
-            img.question-img(src=question.imageURL)
-            div.edit-delete
-              if userId === question.User.id
-                button(id=`question-delete-${question.id}` type="submit").delete-btn Delete
-                form(action=`/questions/${question.id}/edit` method='get')
-                  input(type='hidden' name='_csrf' value=csrfToken)
-                  button(id=`question-edit-${question.id}` type="submit").edit-btn Edit
-              //- form(action=`/questions/${question.id}/delete` method="post")
-              //-   input(type="hidden" name="_csrf" value=csrfToken)
-              //-   button(id=`delete-${question.id}`).delete-btn Delete Question
+    section.homeContainer
+      div.categoriesContainer
+        ul
+          li taxed
+          li rent
+      div.questionsContainer
+        each question in questions
+          div.post(id=`question-container-${question.id}`)
+            div
+              img.user-icon(src='../stylesheets/userIcon.jpg')
+              span.span-css= question.User.username
+              //- span.phrase-css= 'asked'
+              span.cat= question.Category.category
+            div
+              a.title(href=`/questions/${question.id}`)= question.title
+              div
+                p.con= question.content
+                img.question-img(src=question.imageURL)
+                div.edit-delete
+                  if userId === question.User.id
+                    button(id=`question-delete-${question.id}` type="submit").delete-btn Delete
+                    form(action=`/questions/${question.id}/edit` method='get')
+                      input(type='hidden' name='_csrf' value=csrfToken)
+                      button(id=`question-edit-${question.id}` type="submit").edit-btn Edit
