add hover effect to question

--- a/views/questionFeed.pug
+++ b/views/questionFeed.pug
@@ -64,7 +64,8 @@ block content
               img.user-icon(src='../stylesheets/userIcon.jpg')
               span.span-css= question.User.username
               //- span.phrase-css= 'asked'
-              span.cat= question.Category.category
+              span.cat
+                img.category-img(src=`../stylesheets/categories/${question.Category.id}.png`)
             div
               a.title(href=`/questions/${question.id}`)= question.title
               div
