--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -87,7 +87,7 @@ nav {
   display: flex;
   align-items: stretch;
   justify-content: space-around;
-  padding: 5px;
+  padding: 10px;
   flex-wrap: wrap-reverse;
   white-space: nowrap;
 }
@@ -131,14 +131,17 @@ nav li:hover {
 .logoutButton {
   background-color: white;
   color: rgb(185, 43, 39);
-  border: 1px solid rgb(185, 43, 39);
-  border-radius: 50px;
-  font-size: 12px;
+  /* border: 1px solid rgb(185, 43, 39);
+  border-radius: 50px; */
+  border:none;
+  font-size: 15px;
+  font-weight: bold;
 }
 
 .logoutButton:hover {
-  background-color: rgba(185, 43, 39, 0.5);
-  color: white;
+  color: rgb(128, 31, 28);
+  /* background-color: rgba(185, 43, 39, 0.5); */
+  /* color: white; */
 }
 
 .searchbutton {
@@ -240,17 +243,20 @@ label {
   /* height: fit-content; */
 
   padding: 25px 25px;
-  margin: 3px;
+  margin: 10px;
   font-weight: lighter;
   background: #ffffff;
   box-sizing: border-box;
   border-radius: 3px;
-  border: 1px solid rgb(204, 204, 204);
+  /* border: 1px solid rgb(204, 204, 204); */
   /* box-shadow: 1px 1px #888888; */
+  filter: drop-shadow(0.5rem 0.5rem 0.5rem rgba(161,162,164,.7));
 }
 
 .post:hover {
-  background-color: rgba(242, 242, 242, 0.6);
+  /* background-color: rgba(242, 242, 242, 0.6); */
+  filter: drop-shadow(0.2rem 0.2rem 0.1rem rgba(171, 58, 45, 0.7));
+
 }
 
 .title {
@@ -302,23 +308,19 @@ label {
 }
 
 .cat {
-  /* font-size: small;
-  /* font-style: italic; */
-  /* display: flex; */
-  /* flex-direction: row-reverse;
-  justify-content: flex-end; */
-  /* justify-content: space-between;  */
-  /* float: right; */
+
   display: inline-flex;
   float: right;
-  /* padding-top: 6px; */
-  /* vertical-align: middle; */
   font-weight: lighter;
   color: gray;
   margin-top: 2px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   padding: 3px;
-  border: 1px rgb(189, 189, 189) solid;
+  /* border: 1px rgb(189, 189, 189) solid; */
+}
+
+.cat img {
+  width: 50px;
 }
 
 .con {
@@ -551,7 +553,8 @@ textarea {
   display: flex;
   justify-content: center;
   position: relative;
-  height: 10000px;
+  width: 100%;
+  justify-content: space-evenly;
 }
 
 .questionsContainer {
@@ -572,7 +575,6 @@ textarea {
   padding-bottom: 50px;
   background-color: transparent !important;
   filter: drop-shadow(0.5rem 0.5rem 0.5rem rgba(161,162,164,.7));
-
 }
 
 .category-img {
@@ -589,7 +591,8 @@ textarea {
 .categoriesList {
   list-style-type: none;
   display: grid;
-  grid-template-columns: 1fr 1fr
+  grid-template-columns: 1fr 1fr;
+  gap: 10px 5px;
 }
 
 .categoryName{
