--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -598,3 +598,19 @@ textarea {
 .categoryName{
   padding-left: 5px;
 }
+
+
+.categoryButton {
+  border: none;
+  background-color: transparent !important;
+  display: flex;
+  align-items: center;
+  padding-left: 5px;
+  color: rgb(185, 43, 39);
+  font-weight: bold;
+  font-size: 15px !important;
+}
+
+.categoryButton:hover {
+  filter: drop-shadow(0.1rem 0.1rem 0.1rem rgba(92, 19, 11, 0.495));
+}
