--- a/views/questionFeed.pug
+++ b/views/questionFeed.pug
@@ -6,86 +6,86 @@ block content
         ul.categoriesList
           li
             div.categoryContainer
-              form(action=`/questions/1` method='get')
+              form(action=`/questions/category/1` method='get')
                 button.categoryButton( type="submit")
                   div
-                    img.category-img(src='../stylesheets/categories/1.png')
+                    img.category-img(src='/stylesheets/categories/1.png')
                   div.categoryName Taxes
           li
             div.categoryContainer
-              form(action=`/questions/2` method='get')
+              form(action=`/questions/category/2` method='get')
                 button.categoryButton( type="submit")
                   div
-                    img.category-img(src='../stylesheets/categories/2.png')
+                    img.category-img(src='/stylesheets/categories/2.png')
                   div.categoryName Laundry
           li
             div.categoryContainer
-              form(action=`/questions/3` method='get')
+              form(action=`/questions/category/3` method='get')
                 button.categoryButton( type="submit")
                   div
-                    img.category-img(src='../stylesheets/categories/3.png')
+                    img.category-img(src='/stylesheets/categories/3.png')
                   div.categoryName Rent
           li
             div.categoryContainer
-              form(action=`/questions/4` method='get')
+              form(action=`/questions/category/4` method='get')
                 button.categoryButton( type="submit")
                   div
-                    img.category-img(src='../stylesheets/categories/4.png')
+                    img.category-img(src='/stylesheets/categories/4.png')
                   div.categoryName Medication
           li
             div.categoryContainer
-              form(action=`/questions/5` method='get')
+              form(action=`/questions/category/5` method='get')
                 button.categoryButton( type="submit")
                   div
-                    img.category-img(src='../stylesheets/categories/5.png')
+                    img.category-img(src='/stylesheets/categories/5.png')
                   div.categoryName Cooking
           li
             div.categoryContainer
-              form(action=`/questions/6` method='get')
+              form(action=`/questions/category/6` method='get')
                 button.categoryButton( type="submit")
                   div
-                    img.category-img(src='../stylesheets/categories/6.png')
+                    img.category-img(src='/stylesheets/categories/6.png')
                   div.categoryName Cleaning
           li
             div.categoryContainer
-              form(action=`/questions/7` method='get')
+              form(action=`/questions/category/7` method='get')
                 button.categoryButton( type="submit")
                   div
-                    img.category-img(src='../stylesheets/categories/7.png')
+                    img.category-img(src='/stylesheets/categories/7.png')
                   div.categoryName Repairs
           li
             div.categoryContainer
-              form(action=`/questions/8` method='get')
+              form(action=`/questions/category/8` method='get')
                 button.categoryButton( type="submit")
                   div
-                    img.category-img(src='../stylesheets/categories/8.png')
+                    img.category-img(src='/stylesheets/categories/8.png')
                   div.categoryName Social Advice
           li
             div.categoryContainer
-              form(action=`/questions/9` method='get')
+              form(action=`/questions/category/9` method='get')
                 button.categoryButton( type="submit")
                   div
-                    img.category-img(src='../stylesheets/categories/9.png')
+                    img.category-img(src='/stylesheets/categories/9.png')
                   div.categoryName
                     div Relationship
                     div Advice
           li
             div.categoryContainer
-              form(action=`/questions/10` method='get')
+              form(action=`/questions/category/10` method='get')
                 button.categoryButton( type="submit")
                   div
-                    img.category-img(src='../stylesheets/categories/10.png')
+                    img.category-img(src='/stylesheets/categories/10.png')
                   div.categoryName Other
 
       div.questionsContainer
         each question in questions
           div.post(id=`question-container-${question.id}`)
             div
-              img.user-icon(src='../stylesheets/userIcon.jpg')
+              img.user-icon(src='/stylesheets/userIcon.jpg')
               span.span-css= question.User.username
               //- span.phrase-css= 'asked'
               span.cat
-                img.category-img(src=`../stylesheets/categories/${question.Category.id}.png`)
+                img.category-img(src=`/stylesheets/categories/${question.Category.id}.png`)
             div
               a.title(href=`/questions/${question.id}`)= question.title
               div
