--- a/views/newQuestion.pug
+++ b/views/newQuestion.pug
@@ -16,7 +16,7 @@ block content
         div
           label(for='imageURL')
           br
-          textarea.title-content(name='imageURL' value=imageURL required placeholder='image url example : https://res.cloudinary.com/mabmab/image/upload/v1642456611/askMomDad.png')
+          textarea.title-content(name='imageURL' value=imageURL placeholder='image url example : https://res.cloudinary.com/mabmab/image/upload/v1642456611/askMomDad.png')
           br
         div
           label(for='content')
