--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -508,13 +508,16 @@ textarea {
 }
 
 .postQuestion {
-  border: 1px solid rgb(201, 201, 201);
+  /* border: 1px solid rgb(201, 201, 201); */
   background-color: white;
   width: 600px;
   margin: 10px;
   padding: 30px;
   border-radius: 3px;
   height: auto;
+  margin-top: 50px;
+  filter: drop-shadow(0.5rem 0.5rem 0.5rem rgba(161,162,164,.7));
+
 }
 
 .question-content {
