--- a/views/edit-question.pug
+++ b/views/edit-question.pug
@@ -14,7 +14,7 @@ block content
       div
         label(for='title')
         br
-        textarea.answer-content(type='text' name='title' value=question.title required)=question.title
+        textarea.title-content(type='text' name='title' value=question.title required)=question.title
         br
       div
         label(for='imageURL')
