--- a/views/singleQuestion.pug
+++ b/views/singleQuestion.pug
@@ -6,7 +6,8 @@ block content
       img.user-icon(src='../stylesheets/userIcon.jpg')
       span.span-css= question.User.username
       //- span.phrase-css= 'asked'
-      span.cat= question.Category.category
+      span.cat
+        img.category-img(src=`/stylesheets/categories/${question.Category.id}.png`)
       span.singlequestion-title= question.title
       p.con= question.content
       img.question-img(src=question.imageURL)
