--- a/views/questionFeed.pug
+++ b/views/questionFeed.pug
@@ -81,7 +81,7 @@ block content
         each question in questions
           div.post(id=`question-container-${question.id}`)
             div
-              img.user-icon(src='/stylesheets/userIcon.jpg')
+              img.user-icon(src='/stylesheets/profilePic.png')
               span.span-css= question.User.username
               //- span.phrase-css= 'asked'
               span.cat
