--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -164,6 +164,7 @@ a{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: inset 0 0 0 2000px rgb(27 26 27 / 35%);
 }
 
 #accountAlready a {
