added link to head of project to show on linkedin

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,11 @@ html
         title="ASKMOM&DAD"
         link(rel='stylesheet' href='/stylesheets/index.css')
         script(src="/javascripts/index.js" type="module" defer)
+        meta(name="title" property="og:title" content="ASKMOM&DAD | A Quora Clone")
+        meta(property="og:type" content="Website")
+        meta(name="image" property="og:image" content="https://media.discordapp.net/attachments/929826139906637925/942987167876141126/unknown.png?width=1027&height=505")
+        meta(name="description" property="og:description" content="ASKMOM&DAD is a team-developed full-stack application built with JavaScript, PugJS, Express, Sequelize, Postgres, HTML / CSS.")
+        meta(name="author" content="Kelsey Sry, Devin Juley, Brittany Moliver, Alex Poberezhskiy")
   body
     .container
       .background-image
